--- a/config.env
+++ b/config.env
@@ -15,7 +15,7 @@ DATABASE_URL = "mongodb+srv://Venkat3823:IP6ZKL4cGaaf52ME@userage.jourx.mongodb.
 AUTHORIZED_CHATS = "-1001807553305"
 SUDO_USERS = "1956698956"
 IGNORE_PENDING_REQUESTS = "True"
-USE_SERVICE_ACCOUNTS = "True"
+USE_SERVICE_ACCOUNTS = "False"
 INDEX_URL = "https://toonsweb.toonshood.workers.dev/"
 STATUS_LIMIT = "4" #recommended value 2
 STOP_DUPLICATE = "False"
